// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`messageGenerator > generateMessageFile > generates a message file with no fields 1`] = `
"#nullable enable
#pragma warning disable CS1591
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

namespace DataverseModel
{
	
	[System.Runtime.Serialization.DataContractAttribute()]
	[Microsoft.Xrm.Sdk.Client.RequestProxyAttribute("contoso_TriggerSync")]
	public partial class contoso_TriggerSyncRequest : Microsoft.Xrm.Sdk.OrganizationRequest
	{
		public static class Fields
		{
			public const string ActionName = "contoso_TriggerSync";
		}
		
		public contoso_TriggerSyncRequest()
		{
			this.RequestName = "contoso_TriggerSync";
			this.Parameters["contoso_TriggerSync"] = null;
		}
	}
	
	[System.Runtime.Serialization.DataContractAttribute()]
	[Microsoft.Xrm.Sdk.Client.ResponseProxyAttribute("contoso_TriggerSync")]
	public partial class contoso_TriggerSyncResponse : Microsoft.Xrm.Sdk.OrganizationResponse
	{
		public static class Fields
		{
			public const string ActionName = "contoso_TriggerSync";
		}
		
	}
}
#pragma warning restore CS1591"
`;

exports[`messageGenerator > generateMessageFile > generates a single message file with request and response fields 1`] = `
"#nullable enable
#pragma warning disable CS1591
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

namespace DataverseModel
{
	
	[System.Runtime.Serialization.DataContractAttribute()]
	[Microsoft.Xrm.Sdk.Client.RequestProxyAttribute("contoso_CalculateCommission")]
	public partial class contoso_CalculateCommissionRequest : Microsoft.Xrm.Sdk.OrganizationRequest
	{
		public static class Fields
		{
			public const string ActionName = "contoso_CalculateCommission";
			public const string OpportunityId = "OpportunityId";
			public const string OverrideRate = "OverrideRate";
		}
		
		public contoso_CalculateCommissionRequest()
		{
			this.RequestName = "contoso_CalculateCommission";
			this.Parameters["contoso_CalculateCommission"] = null;
		}
		
		[System.Runtime.Serialization.DataMemberAttribute()]
		public System.Guid OpportunityId
		{
			[System.Diagnostics.DebuggerNonUserCode()]
			get
			{
				return ((System.Guid)(this.Parameters["OpportunityId"]));
			}
			[System.Diagnostics.DebuggerNonUserCode()]
			set
			{
				this.Parameters["OpportunityId"] = value;
			}
		}
		
		[System.Runtime.Serialization.DataMemberAttribute()]
		public System.Nullable<decimal>? OverrideRate
		{
			[System.Diagnostics.DebuggerNonUserCode()]
			get
			{
				return ((System.Nullable<decimal>)(this.Parameters["OverrideRate"]));
			}
			[System.Diagnostics.DebuggerNonUserCode()]
			set
			{
				this.Parameters["OverrideRate"] = value;
			}
		}
	}
	
	[System.Runtime.Serialization.DataContractAttribute()]
	[Microsoft.Xrm.Sdk.Client.ResponseProxyAttribute("contoso_CalculateCommission")]
	public partial class contoso_CalculateCommissionResponse : Microsoft.Xrm.Sdk.OrganizationResponse
	{
		public static class Fields
		{
			public const string ActionName = "contoso_CalculateCommission";
			public const string CommissionAmount = "CommissionAmount";
			public const string BreakdownJson = "BreakdownJson";
		}
		
		
		[System.Runtime.Serialization.DataMemberAttribute()]
		public System.Nullable<decimal>? CommissionAmount
		{
			[System.Diagnostics.DebuggerNonUserCode()]
			get
			{
				return ((System.Nullable<decimal>)(this.Results["CommissionAmount"]));
			}
			[System.Diagnostics.DebuggerNonUserCode()]
			set
			{
				this.Results["CommissionAmount"] = value;
			}
		}
		
		[System.Runtime.Serialization.DataMemberAttribute()]
		public string? BreakdownJson
		{
			[System.Diagnostics.DebuggerNonUserCode()]
			get
			{
				return ((string)(this.Results["BreakdownJson"]));
			}
			[System.Diagnostics.DebuggerNonUserCode()]
			set
			{
				this.Results["BreakdownJson"] = value;
			}
		}
	}
}
#pragma warning restore CS1591"
`;

exports[`messageGenerator > generateMessagesFile > generates a combined messages file 1`] = `
"#nullable enable
#pragma warning disable CS1591
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

namespace DataverseModel
{

	
	[System.Runtime.Serialization.DataContractAttribute()]
	[Microsoft.Xrm.Sdk.Client.RequestProxyAttribute("contoso_CalculateCommission")]
	public partial class contoso_CalculateCommissionRequest : Microsoft.Xrm.Sdk.OrganizationRequest
	{
		public static class Fields
		{
			public const string ActionName = "contoso_CalculateCommission";
			public const string OpportunityId = "OpportunityId";
			public const string OverrideRate = "OverrideRate";
		}
		
		public contoso_CalculateCommissionRequest()
		{
			this.RequestName = "contoso_CalculateCommission";
			this.Parameters["contoso_CalculateCommission"] = null;
		}
		
		[System.Runtime.Serialization.DataMemberAttribute()]
		public System.Guid OpportunityId
		{
			[System.Diagnostics.DebuggerNonUserCode()]
			get
			{
				return ((System.Guid)(this.Parameters["OpportunityId"]));
			}
			[System.Diagnostics.DebuggerNonUserCode()]
			set
			{
				this.Parameters["OpportunityId"] = value;
			}
		}
		
		[System.Runtime.Serialization.DataMemberAttribute()]
		public System.Nullable<decimal>? OverrideRate
		{
			[System.Diagnostics.DebuggerNonUserCode()]
			get
			{
				return ((System.Nullable<decimal>)(this.Parameters["OverrideRate"]));
			}
			[System.Diagnostics.DebuggerNonUserCode()]
			set
			{
				this.Parameters["OverrideRate"] = value;
			}
		}
	}
	
	[System.Runtime.Serialization.DataContractAttribute()]
	[Microsoft.Xrm.Sdk.Client.ResponseProxyAttribute("contoso_CalculateCommission")]
	public partial class contoso_CalculateCommissionResponse : Microsoft.Xrm.Sdk.OrganizationResponse
	{
		public static class Fields
		{
			public const string ActionName = "contoso_CalculateCommission";
			public const string CommissionAmount = "CommissionAmount";
			public const string BreakdownJson = "BreakdownJson";
		}
		
		
		[System.Runtime.Serialization.DataMemberAttribute()]
		public System.Nullable<decimal>? CommissionAmount
		{
			[System.Diagnostics.DebuggerNonUserCode()]
			get
			{
				return ((System.Nullable<decimal>)(this.Results["CommissionAmount"]));
			}
			[System.Diagnostics.DebuggerNonUserCode()]
			set
			{
				this.Results["CommissionAmount"] = value;
			}
		}
		
		[System.Runtime.Serialization.DataMemberAttribute()]
		public string? BreakdownJson
		{
			[System.Diagnostics.DebuggerNonUserCode()]
			get
			{
				return ((string)(this.Results["BreakdownJson"]));
			}
			[System.Diagnostics.DebuggerNonUserCode()]
			set
			{
				this.Results["BreakdownJson"] = value;
			}
		}
	}

	
	[System.Runtime.Serialization.DataContractAttribute()]
	[Microsoft.Xrm.Sdk.Client.RequestProxyAttribute("contoso_TriggerSync")]
	public partial class contoso_TriggerSyncRequest : Microsoft.Xrm.Sdk.OrganizationRequest
	{
		public static class Fields
		{
			public const string ActionName = "contoso_TriggerSync";
		}
		
		public contoso_TriggerSyncRequest()
		{
			this.RequestName = "contoso_TriggerSync";
			this.Parameters["contoso_TriggerSync"] = null;
		}
	}
	
	[System.Runtime.Serialization.DataContractAttribute()]
	[Microsoft.Xrm.Sdk.Client.ResponseProxyAttribute("contoso_TriggerSync")]
	public partial class contoso_TriggerSyncResponse : Microsoft.Xrm.Sdk.OrganizationResponse
	{
		public static class Fields
		{
			public const string ActionName = "contoso_TriggerSync";
		}
		
	}
}
#pragma warning restore CS1591"
`;
